# simple_model_predictive_control

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/simple_model_predictive_control/: simple_mpc.hpp
src/: simple-mpc  simple_mpc.cpp
